--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Serpiente</title>
-	<style>
-		#container {
-			position: relative;
-			width: 500px;
-			height: 500px;
-			border: 1px solid black;
-			margin: 0 auto;
-		}
-		.snake {
-			position: absolute;
-			background-color: green;
-			width: 10px;
-			height: 10px;
-		}
-	</style>
-</head>
-<body>
-	<div id="container"></div>
-	<script src="serpiente.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Serpiente</title>
+    <style>
+      #juego {
+        width: 400px;
+        height: 400px;
+        border: 1px solid black;
+      }
+
+      .segmento {
+        width: 5px;
+        height: 5px;
+        background-color: black;
+        position: absolute;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="juego"></div>
+    <script src="juego.js"></script>
+  </body>
 </html>
