--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Serpiente</title>
+    <meta charset="UTF-8" />
+    <title>Snake Game</title>
     <style>
-      #juego {
-        width: 400px;
-        height: 400px;
-        border: 1px solid black;
-      }
-
-      .segmento {
-        width: 5px;
-        height: 5px;
-        background-color: black;
-        position: absolute;
+      canvas {
+        border: 1px solid #ccc;
       }
     </style>
   </head>
   <body>
-    <div id="juego"></div>
-    <script src="juego.js"></script>
+    <canvas id="canvas" width="400" height="400"></canvas>
+    <script src="snake.js"></script>
   </body>
 </html>
