--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Snake Game</title>
-    <style>
-      canvas {
-        border: 1px solid #ccc;
-      }
-    </style>
+    <title>yo</title>
   </head>
   <body>
-    <canvas id="canvas" width="400" height="400"></canvas>
+    <canvas id="myCanvas"></canvas>
     <script src="serpiente.js"></script>
   </body>
 </html>
