--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <title>yo</title>
+    <title>Mi página</title>
   </head>
   <body>
-    <canvas id="myCanvas"></canvas>
-    <script src="serpiente.js"></script>
+    <canvas id="lienzo" width="600" height="400"></canvas>
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        // Código de serpiente.js aquí
+      });
+    </script>
   </body>
 </html>
